[gd_scene load_steps=7 format=3 uid="uid://y0c66svnd50g"]

[ext_resource type="Script" path="res://ui/endgame_ui.gd" id="1_qgopn"]
[ext_resource type="FontFile" uid="uid://sj6nlgwd3wm0" path="res://asset/font/AquinoDemo-511lj.ttf" id="2_6405c"]
[ext_resource type="Texture2D" uid="uid://ur6c6neynl5g" path="res://asset/sprite/fish/sign_eviota.png" id="3_v8pip"]
[ext_resource type="Texture2D" uid="uid://3j8gltdbyfh5" path="res://asset/sprite/fish/satan_fish.png" id="4_txaba"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_84dbo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2egw7"]

[node name="EndgameUI" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qgopn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.768627)

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_right = 1368.0
offset_bottom = 672.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_84dbo")
theme_override_styles/tabbar_background = SubResource("StyleBoxEmpty_2egw7")
tabs_visible = false

[node name="Win" type="Control" parent="TabContainer"]
layout_mode = 2

[node name="WinLabel" type="RichTextLabel" parent="TabContainer/Win"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -384.0
offset_top = 8.0
offset_right = 384.0
offset_bottom = 104.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("2_6405c")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center][rainbow]DEBT PAID[/rainbow][/center]"

[node name="Player" type="TextureRect" parent="TabContainer/Win"]
layout_mode = 0
offset_left = 400.0
offset_top = 192.0
offset_right = 971.0
offset_bottom = 420.0
texture = ExtResource("3_v8pip")

[node name="Label" type="Label" parent="TabContainer/Win"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -385.0
offset_top = -224.0
offset_right = 383.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "And thus, you paid back all the debt.
Now you can rest in peace."
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="TabContainer/Win"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -372.0
offset_top = -96.0
offset_right = -11.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_6405c")
theme_override_font_sizes/font_size = 30
text = "Continue playing"

[node name="BackMenuButton" type="Button" parent="TabContainer/Win"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 52.0
offset_top = -96.0
offset_right = 413.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_6405c")
theme_override_font_sizes/font_size = 30
text = "Back to main menu"

[node name="Lose" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="LostLabel" type="RichTextLabel" parent="TabContainer/Lose"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -384.0
offset_top = 8.0
offset_right = 384.0
offset_bottom = 104.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("2_6405c")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center][color=red][tornado]SOUL  TAKEN[/tornado][/color][/center]"

[node name="SatanFish" type="TextureRect" parent="TabContainer/Lose"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -284.0
offset_top = -152.0
offset_right = 287.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_txaba")

[node name="Label" type="Label" parent="TabContainer/Lose"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -385.0
offset_top = -224.0
offset_right = 383.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "You unable to pay back the debt in time.
You soul belong to the devil.
Forever tormented in hell..."
horizontal_alignment = 1

[node name="BackMenuButton" type="Button" parent="TabContainer/Lose"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.5
offset_top = -96.0
offset_right = 180.5
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_6405c")
theme_override_font_sizes/font_size = 30
text = "Back to main menu"

[connection signal="mouse_entered" from="TabContainer/Win/ContinueButton" to="." method="_on_continue_button_mouse_entered"]
[connection signal="pressed" from="TabContainer/Win/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="mouse_entered" from="TabContainer/Win/BackMenuButton" to="." method="_on_back_menu_button_mouse_entered"]
[connection signal="pressed" from="TabContainer/Win/BackMenuButton" to="." method="_on_back_menu_button_pressed"]
[connection signal="mouse_entered" from="TabContainer/Lose/BackMenuButton" to="." method="_on_back_menu_button_mouse_entered"]
[connection signal="pressed" from="TabContainer/Lose/BackMenuButton" to="." method="_on_back_menu_button_pressed"]
